[update] device policy to service
But wi.getSSID().equals("2h2f") always return false

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,6 @@
         android:id="@+id/toggle_device_admin"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:checked="false"/>
+        android:checked="true"/>
 
 </RelativeLayout>
