--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,24 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ToggleButton
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New ToggleButton"
-        android:id="@+id/toggle_device_admin"
-        android:layout_centerVertical="true"
+        android:inputType="numberPassword"
+        android:ems="10"
+        android:id="@+id/txtPassword"
+        android:hint="請輸入密碼"
+        android:gravity="center"
+        android:layout_above="@+id/btnUninstall"
         android:layout_centerHorizontal="true"
-        android:checked="true"/>
+        android:layout_marginBottom="58dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Uninstall"
+        android:id="@+id/btnUninstall"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
