--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,23 +8,31 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/txtPassword"
-        android:hint="請輸入密碼"
-        android:gravity="center"
-        android:layout_above="@+id/btnUninstall"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="58dp"/>
+    <!--<EditText-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:inputType="textPassword"-->
+        <!--android:ems="10"-->
+        <!--android:id="@+id/txtPassword"-->
+        <!--android:hint="請輸入密碼"-->
+        <!--android:gravity="center"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="56dp"/>-->
+
+    <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Uninstall"-->
+        <!--android:id="@+id/btnUninstall"-->
+        <!--android:layout_below="@+id/txtPassword"-->
+        <!--android:layout_centerHorizontal="true"/>-->
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Uninstall"
-        android:id="@+id/btnUninstall"
+        android:text="開啟相機"
+        android:id="@+id/btnOpenGPS"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
 
