--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,4 +36,14 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text=""
+        android:id="@+id/textCameraStatus"
+        android:layout_above="@+id/btnOpenGPS"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="52dp"/>
+
 </RelativeLayout>
